// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list of routes 1`] = `
<div
  className="m-route-picker"
>
  <h2>
    Selected Routes
  </h2>
  <ul>
    <li>
      <button
        className="m-route-picker__selected-routes-button"
        onClick={[Function]}
      >
        28
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__selected-routes-button"
        onClick={[Function]}
      >
        39
      </button>
    </li>
  </ul>
  <h2>
    Routes
  </h2>
  <ul>
    <li>
      <button
        className="m-route-picker__route-list-button--selected"
        onClick={[Function]}
      >
        *
        28
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button--selected"
        onClick={[Function]}
      >
        *
        39
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button--deselected"
        onClick={[Function]}
      >
        71
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button--deselected"
        onClick={[Function]}
      >
        73
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button--deselected"
        onClick={[Function]}
      >
        111
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders a loading/empty state 1`] = `
<div
  className="m-route-picker"
>
  <h2>
    Selected Routes
  </h2>
  none
  <h2>
    Routes
  </h2>
  loading...
</div>
`;
